# vulkan

./: CMakeLists.txt  CMakePresets.json
assets/: shader.frag  shader.vert
ext/: CMakeLists.txt
src/: app.cpp  app.hpp  bitmap.hpp  command_block.cpp  command_block.hpp  dear_imgui.cpp  dear_imgui.hpp  descriptor_buffer.cpp  descriptor_buffer.hpp  engine.cpp  engine.hpp  gpu.cpp  gpu.hpp  main.cpp  render_target.hpp  renderer.cpp  renderer.hpp  resource_buffering.hpp  scoped.hpp  scoped_waiter.hpp  shader_program.cpp  shader_program.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  vertex.hpp  vma.cpp  vma.hpp  window.cpp  window.hpp
src/glsl/: shader.frag  shader.vert
src/utils/: color.hpp  object.hpp  transform.cpp  transform.hpp
